--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "975b4453",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b111a67e",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "4   227520000        0.0           0.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0dfc12f0",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "(6442, 8)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9aa36b92",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "823fb99a",
    "metadata": {},
    "outputs": [
@@ -309,6 +309,192 @@
     "plt.legend()\n",
     "plt.grid()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b422fd26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lopke\\AppData\\Local\\Temp\\ipykernel_66796\\2654322331.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  data['Price_Change'].fillna(0, inplace=True)  # Fill NaN for the first row\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "      <th>Price_Change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1999-01-22 00:00:00-05:00</td>\n",
+       "      <td>0.040129</td>\n",
+       "      <td>0.044786</td>\n",
+       "      <td>0.035590</td>\n",
+       "      <td>0.037621</td>\n",
+       "      <td>2714688000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1999-01-25 00:00:00-05:00</td>\n",
+       "      <td>0.040607</td>\n",
+       "      <td>0.042039</td>\n",
+       "      <td>0.037621</td>\n",
+       "      <td>0.041562</td>\n",
+       "      <td>510480000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.003941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1999-01-26 00:00:00-05:00</td>\n",
+       "      <td>0.042039</td>\n",
+       "      <td>0.042876</td>\n",
+       "      <td>0.037740</td>\n",
+       "      <td>0.038337</td>\n",
+       "      <td>343200000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.003225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1999-01-27 00:00:00-05:00</td>\n",
+       "      <td>0.038457</td>\n",
+       "      <td>0.039412</td>\n",
+       "      <td>0.036307</td>\n",
+       "      <td>0.038218</td>\n",
+       "      <td>244368000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1999-01-28 00:00:00-05:00</td>\n",
+       "      <td>0.038218</td>\n",
+       "      <td>0.038457</td>\n",
+       "      <td>0.037859</td>\n",
+       "      <td>0.038098</td>\n",
+       "      <td>227520000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000120</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Date      Open      High       Low     Close  \\\n",
+       "0  1999-01-22 00:00:00-05:00  0.040129  0.044786  0.035590  0.037621   \n",
+       "1  1999-01-25 00:00:00-05:00  0.040607  0.042039  0.037621  0.041562   \n",
+       "2  1999-01-26 00:00:00-05:00  0.042039  0.042876  0.037740  0.038337   \n",
+       "3  1999-01-27 00:00:00-05:00  0.038457  0.039412  0.036307  0.038218   \n",
+       "4  1999-01-28 00:00:00-05:00  0.038218  0.038457  0.037859  0.038098   \n",
+       "\n",
+       "       Volume  Dividends  Stock Splits  Price_Change  \n",
+       "0  2714688000        0.0           0.0      0.000000  \n",
+       "1   510480000        0.0           0.0      0.003941  \n",
+       "2   343200000        0.0           0.0     -0.003225  \n",
+       "3   244368000        0.0           0.0     -0.000119  \n",
+       "4   227520000        0.0           0.0     -0.000120  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lets create a column for everyday change in price\n",
+    "data['Price_Change'] = data['Close'].diff()\n",
+    "data['Price_Change'].fillna(0, inplace=True)  # Fill NaN for the first row\n",
+    "data.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fbf3591",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date            0\n",
+       "Open            0\n",
+       "High            0\n",
+       "Low             0\n",
+       "Close           0\n",
+       "Volume          0\n",
+       "Dividends       0\n",
+       "Stock Splits    0\n",
+       "Price_Change    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check missing values:\n",
+    "data.isnull().sum()\n",
+    "# zero! great\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8cee88a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
